Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
0.10
-
None
Description
If a user configures a maximum queue size based on message count via
qpid-config, the default producer flow control limits are not correctly
computed.
Steps to Reproduce:
1. qpid-config add queue fleabag --max-queue-count=1000
Actual results:
Queue is created without msg-count based flow control limits:
2011-05-03 16:15:57 info Queue "fleabag": Policy created: type=reject;
maxCount=1000; maxSize=104857600
2011-05-03 16:15:57 info Queue "fleabag": Flow limit created: flowStopCount=0,
flowResumeCount=0, flowStopSize=83886080, flowResumeSize=73400320
Expected results:
Queue should be created with flowStopCount=800 & flowResumeCount=700 (using
broker-wide default ratios).