QPID-3243: correctly use --max-queue-count value to compute flow limit.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1099278 13f79535-47bb-0310-9956-ffa450edef68